<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThermAppSDKSample</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ac_tst">AcTST</string>
    <string name="title_activity_ftpdownload">FTPDownload</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_splah_screen">SplahScreen</string>
    <string name="title_activity_slpash">Slpash</string>
    <string name="title_activity_terms_of_use">TermsOfUse</string>
    <string name="welcome_retry_text">Download Failed!\nProblem communicating with ThermApp servers.</string>
    <string name="welcome_retry_btn_retry">Retry</string>
    <string name="welcome_retry_btn_close">Close</string>    
	<string name="welcome_retry_text_no_internet">Download Failed!\nNo internet connection available.\n Internet is needed to complete initialization.</string>
	<string name="welcome_retry_text_unrecognized_begin">Download Failed!\nYour device</string>
    <string name="welcome_retry_text_unrecognized_end">is unrecognized.\nPlease contact support.</string>
    <string name="welcome_download_text_upper">Initializing...</string>
    <string name="welcome_download_text_upper_downloading">Downloading...</string>
    <string name="welcome_download_text_lower">Please wait...</string>	
    <string name="welcome_terms_welcome">Welcome to Therm-App.\n Before we can get started\nplease approve our</string>
    <string name="welcome_terms_text">Terms of Use</string>
    <string name="welcome_terms_decline">I do not accept it</string>
</resources>