<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeActivity" >

    <LinearLayout
        android:id="@+id/retry_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/welcome_retry_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:height="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="" />
        
            <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="horizontal" >
	        
	        	<Button
	        	    android:id="@+id/retry_button"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/welcome_retry_btn_retry" />

	        	<Button
	        	    android:id="@+id/close_button"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/welcome_retry_btn_close" />
	        	
	        </LinearLayout>
		        		        	
	        	
    </LinearLayout>

    <LinearLayout
        android:id="@+id/donwload_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/welcome_download_text_upper" />

        <ProgressBar
            android:id="@+id/progressBar_download"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_perc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/welcome_download_text_lower" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo_sdk" />

    <LinearLayout
        android:id="@+id/terms_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_terms_welcome"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_tofu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:text="@string/welcome_terms_text"
            android:textColor="#29abe2" />

        <ImageButton
            android:id="@+id/imageButton_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/accept" />

        <Button
            android:id="@+id/button_not_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/welcome_terms_decline"
            android:textColor="#29abe2" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="36dp"/>

</RelativeLayout>